# DACN_Nhom14

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Scripts/: run_be.sh  setup_env.sh  setup_monitor.sh  setupgit.sh
fe/: index.html
pvcore/: main.py
pvcore/api/: routers.py
pvcore/models/: down_model.py  model_MobileNetV3.py  model_VisionTriX.py
pvcore/shared/: config.py
pvcore/shared/utils/: processor.py
src/Model_arch/: CDCN.py  CDRes_ViT.py  CDRes_ViTModel.py  Preprocess.py  ResNet.py  ViT.py  train_mode.py
