[project]
name = "dacn-nhom14"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "uvicorn>=0.35.0",
    "pandas>=2.3.3",
    "opencv-python>=4.11.0.86",
    "gdown>=5.2.0",
    "timm>=1.0.22",
    "decord>=0.6.0",
    "albumentations>=2.0.8",
    "fastapi>=0.121.2",
    "python-multipart>=0.0.20",
]

